--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6786e1
-	base = a7aff10
-	trim = 
-	trimbase = 
+	base = c9a35f6
+	trim = rviz_marker_tools
+	trimbase = a7aff10
