--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6786e1
-	base = f8802fa
-	trim = 
-	trimbase = 
+	base = 5a050af
+	trim = core
+	trimbase = f8802fa
