--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6786e1
-	base = fac6d02
-	trim = 
-	trimbase = 
+	base = ee8b34a
+	trim = msgs
+	trimbase = fac6d02
