--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6786e1
-	base = 204823f
-	trim = 
-	trimbase = 
+	base = 3e5a0e1
+	trim = visualization
+	trimbase = 204823f
