--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6786e1
-	base = d04ae09
-	trim = 
-	trimbase = 
+	base = e0855eb
+	trim = capabilities
+	trimbase = d04ae09
