--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6786e1
-	base = 37f25fe
-	trim = 
-	trimbase = 
+	base = f5923c2
+	trim = demo
+	trimbase = 37f25fe
