--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/moveit_task_constructor_msgs
-	previous = 
-	base = ee8b34a
+	previous = ee8b34a
+	base = 1ed3666
 	trim = 
 	trimbase = 
