--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_msgs
-	previous = 
-	base = 545634f
+	previous = 545634f
+	base = c2c9fd7
 	trim = 
 	trimbase = 
