--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/moveit_task_constructor_core
-	previous = 
-	base = 5a050af
+	previous = 5a050af
+	base = 4026994
 	trim = 
 	trimbase = 
