--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_core
-	previous = 
-	base = 577f31e
+	previous = 577f31e
+	base = e38f15d
 	trim = 
 	trimbase = 
