--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/moveit_task_constructor_demo
-	previous = 
-	base = f5923c2
+	previous = f5923c2
+	base = b65f5a6
 	trim = 
 	trimbase = 
