--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_demo
-	previous = 
-	base = 1d1fa56
+	previous = 1d1fa56
+	base = d39e3a6
 	trim = 
 	trimbase = 
