--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_visualization
-	previous = 
-	base = b10b0a7
+	previous = b10b0a7
+	base = 9fa8521
 	trim = 
 	trimbase = 
