--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/rviz_marker_tools
-	previous = 
-	base = c9a35f6
+	previous = c9a35f6
+	base = 6176e06
 	trim = 
 	trimbase = 
