--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/rviz_marker_tools
-	previous = 
-	base = 95d2a3b
+	previous = 95d2a3b
+	base = cf6bdd3
 	trim = 
 	trimbase = 
