--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/moveit_task_constructor_capabilities
-	previous = 
-	base = e0855eb
+	previous = e0855eb
+	base = eb6005a
 	trim = 
 	trimbase = 
