--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_capabilities
-	previous = 
-	base = cb1423a
+	previous = cb1423a
+	base = 7c2f0d0
 	trim = 
 	trimbase = 
