--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/rviz_marker_tools
-	previous = 
-	base = d588b6b
+	previous = d588b6b
+	base = ff09ce1
 	trim = 
 	trimbase = 
