--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_demo
-	previous = 
-	base = 78de5e2
+	previous = 78de5e2
+	base = c2040cc
 	trim = 
 	trimbase = 
