--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_msgs
-	previous = 
-	base = cb04315
+	previous = cb04315
+	base = 077f3ef
 	trim = 
 	trimbase = 
