--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_capabilities
-	previous = 
-	base = 5a47e67
+	previous = 5a47e67
+	base = a4d8357
 	trim = 
 	trimbase = 
