--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/moveit_task_constructor_core
-	previous = 
-	base = 6d1ab87
+	previous = 6d1ab87
+	base = b352d31
 	trim = 
 	trimbase = 
