--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 94ed837
-	base = 909a859
+	base = 37cd780
 	trim = rviz_marker_tools
-	trimbase = 
+	trimbase = 909a859
