--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 94ed837
-	base = 8c7a9a3
+	base = eec5014
 	trim = core
-	trimbase = 
+	trimbase = 8c7a9a3
