--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 94ed837
-	base = f7ab79b
+	base = 691bcd3
 	trim = msgs
-	trimbase = 
+	trimbase = f7ab79b
