--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 94ed837
-	base = 4313c13
+	base = 8aba1ff
 	trim = visualization
-	trimbase = 
+	trimbase = 4313c13
