--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 94ed837
-	base = 9eb70ec
+	base = f9ba6c7
 	trim = capabilities
-	trimbase = 
+	trimbase = 9eb70ec
