--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 94ed837
-	base = 2794187
+	base = db7efca
 	trim = demo
-	trimbase = 
+	trimbase = 2794187
