--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,7 @@
 	<description>Tools for marker creation / handling</description>
 
 	<license>BSD</license>
+	<author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
 	<maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
 
 	<buildtool_depend>catkin</buildtool_depend>
@@ -12,4 +13,5 @@
 	<depend>geometry_msgs</depend>
 	<depend>roscpp</depend>
 	<depend>rviz</depend>
+	<depend>tf2_eigen</depend>
 </package>
