--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 689a976
-	base = 738df70
+	base = 787dd69
 	trim = rviz_marker_tools
-	trimbase = 
+	trimbase = 738df70
