--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 689a976
-	base = 4bf28ac
+	base = 8770e7d
 	trim = core
-	trimbase = 
+	trimbase = 4bf28ac
