--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 689a976
-	base = 7fd10e6
+	base = ce7c7e9
 	trim = msgs
-	trimbase = 
+	trimbase = 7fd10e6
