--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 689a976
-	base = eb92356
+	base = aab0c25
 	trim = visualization
-	trimbase = 
+	trimbase = eb92356
