--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 689a976
-	base = bde636d
+	base = c9d4cc8
 	trim = capabilities
-	trimbase = 
+	trimbase = bde636d
