--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 689a976
-	base = 55c24b4
+	base = b260525
 	trim = demo
-	trimbase = 
+	trimbase = 55c24b4
