--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47f8d37
-	base = f497b72
+	base = eddc006
 	trim = rviz_marker_tools
-	trimbase = 
+	trimbase = f497b72
