--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47f8d37
-	base = 9219660
+	base = 6dcd94b
 	trim = core
-	trimbase = 
+	trimbase = 9219660
