--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47f8d37
-	base = d28eb6c
+	base = 573890f
 	trim = msgs
-	trimbase = 
+	trimbase = d28eb6c
