--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47f8d37
-	base = f204d23
+	base = 748dd81
 	trim = visualization
-	trimbase = 
+	trimbase = f204d23
