--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47f8d37
-	base = 15f14e5
+	base = 551ecdd
 	trim = capabilities
-	trimbase = 
+	trimbase = 15f14e5
