--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47f8d37
-	base = 8485906
+	base = e8d1e0b
 	trim = demo
-	trimbase = 
+	trimbase = 8485906
