--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2705958
-	base = e281621
+	base = c2af972
 	trim = rviz_marker_tools
-	trimbase = 
+	trimbase = e281621
