--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2705958
-	base = 9d6c625
+	base = e07f358
 	trim = core
-	trimbase = 
+	trimbase = 9d6c625
