--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2705958
-	base = 50be8eb
+	base = cc08bc8
 	trim = msgs
-	trimbase = 
+	trimbase = 50be8eb
