--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2705958
-	base = 7f100af
+	base = 5c4de21
 	trim = visualization
-	trimbase = 
+	trimbase = 7f100af
