--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2705958
-	base = 14ac801
+	base = e6b513d
 	trim = capabilities
-	trimbase = 
+	trimbase = 14ac801
