--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2705958
-	base = 6c4a6b0
+	base = 71b2984
 	trim = demo
-	trimbase = 
+	trimbase = 6c4a6b0
